Add intro section

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,31 @@
     <section class="section intro">
       <div class="intro-wrapper container">
         <div class="intro-card">
-          .
+          <div class="header-img">
+            <i class="fa fas-gear"></i>
+          </div>
+          <h2>Welcome this is Section Will Copy</h2>
+          <p>Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Sequi officiis ipsum delectus laudantium expedita
+            perspiciatis, quasi quo dolore</p>
+        </div>
+        <div class="intro-card">
+          <div class="header-img">
+            <i class="fa fas-gear"></i>
+          </div>
+          <h2>Welcome this is Section Will Copy</h2>
+          <p>Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Sequi officiis ipsum delectus laudantium expedita
+            perspiciatis, quasi quo dolore</p>
+        </div>
+        <div class="intro-card">
+          <div class="header-img">
+            <i class="fa fas-gear"></i>
+          </div>
+          <h2>Welcome this is Section Will Copy</h2>
+          <p>Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Sequi officiis ipsum delectus laudantium expedita
+            perspiciatis, quasi quo dolore</p>
         </div>
       </div>
     </section>
