Added showcase area ( !Done )

--- a/src/index.html
+++ b/src/index.html
@@ -99,12 +99,95 @@
       </div>
     </section>
 
-    <section class="section showcase">
+    <section class="section showcase ">
       <div class="showcase__header">
         <h2 class="header--tite">My Work</h2>
       </div>
-      <div class="showcase__wrapper">
+      <div class="showcase__wrapper container">
+        <div class="sc-child">
+          <div class="child-header">
+            <img src="./images//port-1.png" alt="">
+          </div>
+          <div class="child-body">
+            <h2 class="body-title">Portfolio Web</h2>
+          </div>
+          <div class="child-footer">
+            <div class="footer-detail">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
+            </div>
+          </div>
 
+        </div>
+        <div class="sc-child">
+          <div class="child-header">
+            <img src="./images//port-1.png" alt="">
+          </div>
+          <div class="child-body">
+            <h2 class="body-title">Portfolio Web</h2>
+          </div>
+          <div class="child-footer">
+            <div class="footer-detail">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
+            </div>
+          </div>
+
+        </div>
+        <div class="sc-child">
+          <div class="child-header">
+            <img src="./images//port-1.png" alt="">
+          </div>
+          <div class="child-body">
+            <h2 class="body-title">Portfolio Web</h2>
+          </div>
+          <div class="child-footer">
+            <div class="footer-detail">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
+            </div>
+          </div>
+
+        </div>
+        <div class="sc-child">
+          <div class="child-header">
+            <img src="./images//port-1.png" alt="">
+          </div>
+          <div class="child-body">
+            <h2 class="body-title">Portfolio Web</h2>
+          </div>
+          <div class="child-footer">
+            <div class="footer-detail">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
+            </div>
+          </div>
+
+        </div>
+        <div class="sc-child">
+          <div class="child-header">
+            <img src="./images//port-1.png" alt="">
+          </div>
+          <div class="child-body">
+            <h2 class="body-title">Portfolio Web</h2>
+          </div>
+          <div class="child-footer">
+            <div class="footer-detail">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
+            </div>
+          </div>
+
+        </div>
+        <div class="sc-child">
+          <div class="child-header">
+            <img src="./images//port-1.png" alt="">
+          </div>
+          <div class="child-body">
+            <h2 class="body-title">Portfolio Web</h2>
+          </div>
+          <div class="child-footer">
+            <div class="footer-detail">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
+            </div>
+          </div>
+
+        </div>
       </div>
     </section>
   </div>
