--- a/src/index.html
+++ b/src/index.html
@@ -69,28 +69,28 @@
           <div class="header-img">
             <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="laptop-code" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="svg-inline--fa fa-laptop-code fa-w-20 fa-7x"><path fill="currentColor" d="M266.34 277.65l11.31-11.31c3.12-3.12 3.12-8.19 0-11.31L230.62 208l47.03-47.03c3.12-3.12 3.12-8.19 0-11.31l-11.31-11.31c-3.12-3.12-8.19-3.12-11.31 0l-64 64c-3.12 3.12-3.12 8.19 0 11.31l64 64c3.13 3.12 8.19 3.12 11.31-.01zm96-11.31l11.31 11.31c3.12 3.12 8.19 3.12 11.31 0l64-64c3.12-3.12 3.12-8.19 0-11.31l-64-64c-3.12-3.12-8.19-3.12-11.31 0l-11.31 11.31c-3.12 3.12-3.12 8.19 0 11.31L409.38 208l-47.03 47.03a7.994 7.994 0 0 0-.01 11.31zM624 368h-48V96c0-35.3-28.72-64-64-64H128c-35.28 0-64 28.7-64 64v272H16c-8.84 0-16 7.16-16 16v48c0 44.11 35.88 80 80 80h480c44.12 0 80-35.89 80-80v-48c0-8.84-7.16-16-16-16zM96 96c0-17.67 14.33-32 32-32h384c17.67 0 32 14.33 32 32v272H391.13c-4.06 0-7.02 3.13-7.92 7.09C379.98 389.35 367.23 400 352 400h-64c-15.23 0-27.98-10.65-31.21-24.91-.9-3.96-3.86-7.09-7.92-7.09H96V96zm512 336c0 26.47-21.53 48-48 48H80c-26.47 0-48-21.53-48-48v-32h194.75c6.59 18.62 24.38 32 45.25 32h96c20.88 0 38.66-13.38 45.25-32H608v32z" class=""></path></svg>
           </div>
-          <h2>Developer</h2>
-          <p>Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit. Sequi officiis ipsum delectus laudantium expedita
-            perspiciatis, quasi quo dolore</p>
+    <div class="card-body">
+      <h2>Developer</h2>
+      <p>Building quality websites and applications with HTML, CSS, and JavaScript.</p>
+    </div>
         </div>
         <div class="intro-card">
           <div class="header-img">
 
             <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="palette" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-palette fa-w-16 fa-7x"><path fill="currentColor" d="M112 264c-13.3 0-24 10.7-24 24s10.7 24 24 24 24-10.7 24-24-10.7-24-24-24zm32-112c-13.3 0-24 10.7-24 24s10.7 24 24 24 24-10.7 24-24-10.7-24-24-24zM256 0c-16.9 0-34.2 1.6-51.7 5C104.9 24.4 24.8 104.3 5.2 203.4-29.4 378.5 116.4 512 239.5 512c8.3 0 16.5-.6 24.6-1.9 41.2-6.4 61.4-54.6 42.5-91.7-23.1-45.4 9.9-98.4 60.9-98.4h79.7c35.8 0 64.8-29.6 64.9-65.3C511.6 113.9 397.1 0 256 0zm191.1 288h-79.7c-35.3 0-67.4 17.9-85.7 47.8-18.2 29.7-19.6 66-3.7 97.2 4.9 9.6 4.8 21.6-.1 31.3-2.4 4.6-7.9 12.6-18.7 14.3-6.3 1-12.9 1.5-19.7 1.5-54.6 0-114.1-31.3-155.5-81.6-44-53.6-60.9-120.6-47.4-188.7 17.1-86.6 87-156.2 173.9-173.2 15.2-3 30.5-4.5 45.5-4.5 123.1 0 223.6 99.9 224 222.6 0 18.3-14.8 33.3-32.9 33.3zM368 136c-13.3 0-24 10.7-24 24s10.7 24 24 24 24-10.7 24-24-10.7-24-24-24zM240 88c-13.3 0-24 10.7-24 24s10.7 24 24 24 24-10.7 24-24-10.7-24-24-24z" class=""></path></svg> </div>
+         <div class="card-body">
           <h2>Designer</h2>
-          <p>Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit. Sequi officiis ipsum delectus laudantium expedita
-            perspiciatis, quasi quo dolore</p>
+          <p>Crafting best possible User UI/UX using Adobe Tools,</p>
+         </div>
         </div>
         <div class="intro-card">
           <div class="header-img">
             <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="user-chart" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="svg-inline--fa fa-user-chart fa-w-20 fa-7x"><path fill="currentColor" d="M608 0H192c-17.67 0-32 14.33-32 32v96c-53.02 0-96 42.98-96 96s42.98 96 96 96 96-42.98 96-96c0-41.74-26.8-76.9-64-90.12V32h416v352H305.34c-.59-.94-1.03-1.96-1.65-2.88-17.25-25.62-46.67-39.11-76.9-39.11C199 342.02 192.02 352 160 352c-31.97 0-38.95-9.98-66.79-9.98-30.23 0-59.65 13.48-76.9 39.11C6.01 396.42 0 414.84 0 434.67V472c0 22.09 17.91 40 40 40h240c22.09 0 40-17.91 40-40v-37.33c0-6.41-.84-12.6-2.04-18.67H608c17.67 0 32-14.33 32-32V32c0-17.67-14.33-32-32-32zM224 224c0 35.29-28.71 64-64 64s-64-28.71-64-64 28.71-64 64-64 64 28.71 64 64zm64 248c0 4.41-3.59 8-8 8H40c-4.41 0-8-3.59-8-8v-37.33c0-12.79 3.75-25.13 10.85-35.67 10.53-15.64 29.35-24.98 50.36-24.98 21.8 0 29.99 9.98 66.79 9.98 36.79 0 45.01-9.98 66.79-9.98 21 0 39.83 9.34 50.36 24.98 7.1 10.54 10.85 22.88 10.85 35.67V472zm50.62-319.31c-9.38-9.38-24.56-9.38-33.94 0l-25.49 25.49c4.56 11.72 7.3 24.17 8.21 37.04l34.25-34.25L384.69 244c4.69 4.69 10.81 7.02 16.97 7.02s12.28-2.33 16.97-7.02l58.97-58.97 33.24 33.24c3.96 3.96 8.82 5.73 13.6 5.73 9.99 0 19.57-7.76 19.57-19.47v-95.58c0-7.15-5.8-12.95-12.95-12.95h-95.58c-17.31 0-25.98 20.93-13.74 33.17l33.24 33.24-53.31 53.31-63.05-63.03zM512 128v46.18L465.82 128H512z" class=""></path></svg>
           </div>
+         <div class="card-body">
           <h2>SEO/SEM</h2>
-          <p>Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit. Sequi officiis ipsum delectus laudantium expedita
-            perspiciatis, quasi quo dolore</p>
+          <p>Have very strong grip over SEO/SEM, and hands on expereince with Google Ads.</p>
+         </div>
         </div>
         </div>
         <div class="icon-list">
@@ -104,7 +104,7 @@
         </div>
       </section>
 
-    <section class="section showcase  container">
+    <section class="section showcase">
       <div class="showcase__header">
         <h2 class="header--tite">My Work</h2>
       </div>
@@ -116,82 +116,62 @@
           <div class="child-body">
             <h2 class="body-title">Portfolio Web</h2>
           </div>
-          <div class="child-footer">
-            <div class="footer-detail">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
-            </div>
-          </div>
-
         </div>
         <div class="sc-child">
           <div class="child-header">
-            <img src="./images//port-1.png" alt="">
+            <img src="./images//port-2.png" alt="">
+          </div>
+          <div class="child-body">
+            <h2 class="body-title">Temp1</h2>
+          </div>
+        </div>
+          <div class="sc-child">
+          <div class="child-header">
+            <img src="./images//port-3.png" alt="">
           </div>
           <div class="child-body">
             <h2 class="body-title">Portfolio Web</h2>
           </div>
-          <div class="child-footer">
-            <div class="footer-detail">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
-            </div>
-          </div>
-
         </div>
         <div class="sc-child">
           <div class="child-header">
-            <img src="./images//port-1.png" alt="">
+            <img src="./images//port-4.png" alt="">
           </div>
           <div class="child-body">
             <h2 class="body-title">Portfolio Web</h2>
           </div>
-          <div class="child-footer">
-            <div class="footer-detail">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
-            </div>
-          </div>
-
         </div>
         <div class="sc-child">
           <div class="child-header">
-            <img src="./images//port-1.png" alt="">
+            <img src="./images//port-5.png" alt="">
           </div>
           <div class="child-body">
             <h2 class="body-title">Portfolio Web</h2>
           </div>
-          <div class="child-footer">
-            <div class="footer-detail">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
-            </div>
-          </div>
-
         </div>
         <div class="sc-child">
           <div class="child-header">
-            <img src="./images//port-1.png" alt="">
+            <img src="./images//port-6.png" alt="">
           </div>
           <div class="child-body">
             <h2 class="body-title">Portfolio Web</h2>
           </div>
-          <div class="child-footer">
-            <div class="footer-detail">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
-            </div>
-          </div>
-
         </div>
         <div class="sc-child">
           <div class="child-header">
-            <img src="./images//port-1.png" alt="">
+            <img src="./images//port-7.png" alt="">
           </div>
           <div class="child-body">
             <h2 class="body-title">Portfolio Web</h2>
           </div>
-          <div class="child-footer">
-            <div class="footer-detail">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto est velit possimus soluta, obcaecati eaque eum? Reiciendis est officiis, veniam veritatis illo dicta autem aspernatur odit distinctio maiores excepturi delectus.
-            </div>
+        </div>
+        <div class="sc-child">
+          <div class="child-header">
+            <img src="./images//port-8.png" alt="">
           </div>
-
+          <div class="child-body">
+            <h2 class="body-title">Portfolio Web</h2>
+          </div>
         </div>
       </div>
     </section>
