added showcase and reume download

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/main.css">
   <!-- <script src="https://kit.fontawesome.com/edeca98600.js" crossorigin="anonymous"></script> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css">
   <title>Portfolio</title>
 </head>
 
@@ -22,9 +21,9 @@
             <div class="menu">
               <ul class="menu__wrapper">
                 <li class="menu__item"><a href="#">Home</a></li>
-                <li class="menu__item"><a href="#">Experience</a></li>
-                <li class="menu__item"><a href="#">Portfolio</a></li>
-                <li class="menu__item"><a href="#">About</a></li>
+                <li class="menu__item"><a href="#services">Services</a></li>
+                <li class="menu__item"><a href="#portfolio">Portfolio</a></li>
+                <li class="menu__item"><a download="hanzla_habib_resume.pdf" href="./data/hanzla_habib.pdf">Resume</a></li>
               </ul>
             </div>
           </div>
@@ -55,10 +54,9 @@
 
             </div>
           </div>
-
     </section>
 
-    <section class="section intro container">
+    <section class="section intro container" id="services">
       <div class="intro__header">
         <h2 class="header--title">
           Services
@@ -104,9 +102,9 @@
         </div>
       </section>
 
-    <section class="section showcase">
+    <section class="section showcase" id="portfolio">
       <div class="showcase__header">
-        <h2 class="header--tite">My Work</h2>
+        <h2 class="header--title">My Work</h2>
       </div>
       <div class="showcase__wrapper">
         <div class="sc-child">
@@ -114,7 +112,10 @@
             <img src="./images//port-1.png" alt="">
           </div>
           <div class="child-body">
-            <h2 class="body-title">Portfolio Web</h2>
+            <h2 class="body-title">Dumb App</h2>
+            <div class="view-more">
+              <a href="/Dumbo" target="_blank" rel="noopener noreferrer">View</a>
+            </div>
           </div>
         </div>
         <div class="sc-child">
@@ -122,7 +123,10 @@
             <img src="./images//port-2.png" alt="">
           </div>
           <div class="child-body">
-            <h2 class="body-title">Temp1</h2>
+            <h2 class="body-title">Social Platform</h2>
+            <div class="view-more">
+              <a href="/EizanLab" target="_blank" rel="noopener noreferrer">View</a>
+            </div>
           </div>
         </div>
           <div class="sc-child">
@@ -130,7 +134,10 @@
             <img src="./images//port-3.png" alt="">
           </div>
           <div class="child-body">
-            <h2 class="body-title">Portfolio Web</h2>
+            <h2 class="body-title">Book Show Case</h2>
+            <div class="view-more">
+              <a href="/MicMuke" target="_blank" rel="noopener noreferrer">View</a>
+            </div>
           </div>
         </div>
         <div class="sc-child">
@@ -138,7 +145,10 @@
             <img src="./images//port-4.png" alt="">
           </div>
           <div class="child-body">
-            <h2 class="body-title">Portfolio Web</h2>
+            <h2 class="body-title">Cup Cake Business</h2>
+            <div class="view-more">
+              <a href="/cupcake" target="_blank" rel="noopener noreferrer">View</a>
+            </div>
           </div>
         </div>
         <div class="sc-child">
@@ -146,7 +156,10 @@
             <img src="./images//port-5.png" alt="">
           </div>
           <div class="child-body">
-            <h2 class="body-title">Portfolio Web</h2>
+            <h2 class="body-title">Camping Store</h2>
+            <div class="view-more">
+              <a href="/bits" target="_blank" rel="noopener noreferrer">View</a>
+            </div>
           </div>
         </div>
         <div class="sc-child">
@@ -154,7 +167,10 @@
             <img src="./images//port-6.png" alt="">
           </div>
           <div class="child-body">
-            <h2 class="body-title">Portfolio Web</h2>
+            <h2 class="body-title">Photographer Portfolio (Focus)</h2>
+            <div class="view-more">
+              <a href="/focus" target="_blank" rel="noopener noreferrer">View</a>
+            </div>
           </div>
         </div>
         <div class="sc-child">
@@ -162,7 +178,10 @@
             <img src="./images//port-7.png" alt="">
           </div>
           <div class="child-body">
-            <h2 class="body-title">Portfolio Web</h2>
+            <h2 class="body-title">Furniture Store (SPA)</h2>
+            <div class="view-more">
+              <a href="/comfy" target="_blank" rel="noopener noreferrer">View</a>
+            </div>
           </div>
         </div>
         <div class="sc-child">
@@ -170,19 +189,21 @@
             <img src="./images//port-8.png" alt="">
           </div>
           <div class="child-body">
-            <h2 class="body-title">Portfolio Web</h2>
+            <h2 class="body-title">Project Management mini Application</h2>
+            <div class="view-more">
+              <a href="/todoApp" target="_blank" rel="noopener noreferrer">View</a>
+            </div>
           </div>
         </div>
       </div>
     </section>
   </div>
 
-  <script src="js/plugin/jQuery.js"></script>
-  <script src="js/plugin/fullPage.js"></script>
   <script src="js/plugin/parallex.js"></script>
   <script src="js/plugin/typeWrite.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/vendors/easings.min.js"></script> -->
-  <script src="./js/main.js"></script>\
+  <script src="./js/main.js"></script>
+
+</script>
 </body>
 
 </html>
